--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,16 @@
-{% capture parent_page_title %}{% if page.parent %}{{ page.parent | capitalize }} | {% endif %}{% endcapture %}
-{% capture meta_title %}{{ site.name | append: ' | ' | append: parent_page_title | append: page.title }}{% endcapture %}
-{% capture meta_description %}{% if page.seo.description %}{{ page.seo.description }}{% else %}{{ site.seo.description }}{% endif %}{% endcapture %}
+{% capture parent_page_title %}
+{% if page.parent %}{{ page.parent | capitalize }} | {% endif %}
+{% endcapture %}
+{% capture meta_title %}
+{{ site.name | append: ' | ' | append: parent_page_title | append: page.title }}
+{% endcapture %}
+{% capture meta_description %}
+{% if page.seo.description %}
+  {{ page.seo.description }}
+{% else %}
+  {{ site.seo.description }}
+{% endif %}
+{% endcapture %}
 <title>{{ meta_title }}</title>
 <meta name="description" content="{{ meta_description }}" />
 
@@ -18,9 +28,9 @@
 <meta name="twitter:site" content="{{ site.url }}" />
 <meta name="twitter:title" content="{{ meta_title }}" />
 <meta name="twitter:description" content="{{ meta_description }}" />
-<meta name="twitter:image" content="/public/images/social/og-twitter-icon.png" />
+<meta name="twitter:image" content="/public/images/social/twitter-icon.png" />
 
-<meta name="apple-mobile-web-app-title" content="Ruby Conference Thailand"/>
+<meta name="apple-mobile-web-app-title" content="{{ site.name }}"/>
 <meta name="mobile-web-app-capable" content="yes"/>
 <meta name="apple-touch-fullscreen" content="yes"/>
 <meta name="apple-mobile-web-app-status-bar-style" content="#1b79ea"/>
