--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -3,17 +3,20 @@
 # only Main files contain this front matter, not partials.
 ---
 
+@import 'variables';
+
 // Vendor
-@import '../vendor/stylesheets/normalize';
+
+@import '../vendor/stylesheets/bootstrap/bootstrap';
 
 // Application
-@import 'variables';
 
 @import 'functions/asset-url';
 @import 'functions/image-url';
 
 //@import 'mixins/mixin-name';
 
+@import 'base/root';
 @import 'base/typography';
 
 @import 'layouts/default';
