--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,7 +13,7 @@ $color-gray: (
 // Typography
 
 $base-font-size: 1rem;
-$base-font-family: 'Open Sans', -apple-system, 'Segoe UI', sans-serif;
+$base-font-family: 'Work Sans', -apple-system, 'Segoe UI', sans-serif;
 $base-line-height: 1.7;
 $base-font-color: map-get($color-gray, 'primary');
 
