--- a/_sass/layouts/default.scss
+++ b/_sass/layouts/default.scss
@@ -1,11 +1,22 @@
 .layout-default body {
   display: grid;
-  grid-template-rows: 8.5rem 1fr 5rem;
+  grid-template-rows: rem(92px) 1fr rem(60px);
 
   min-height: 100vh;
-  padding: 0 5vw;
+}
+
+.layout-default .app-header,
+.layout-default .app-content,
+.layout-default .app-footer {
+  @include make-container();
+
+  @include media-breakpoint-up('lg') {
+    padding-right: $grid-gutter-width;
+    padding-left: $grid-gutter-width;
+  }
 }
 
 .layout-default .app-header {
-  width: 100%;
+  padding-top: rem(30px);
+  padding-bottom: rem(30px);
 }
