--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -13,12 +13,14 @@
 
 @import 'functions/asset-url';
 @import 'functions/image-url';
-
-//@import 'mixins/mixin-name';
+@import 'functions/sizing';
 
 @import 'base/root';
 @import 'base/typography';
 
 @import 'layouts/default';
 
+@import 'components/app-header';
 @import 'components/icon';
+@import 'components/list';
+@import 'components/list-social-platform';
