Improve responsive behaviour of the footer and illustration background

--- a/_sass/layouts/default.scss
+++ b/_sass/layouts/default.scss
@@ -1,8 +1,19 @@
 .layout-default body {
   display: grid;
-  grid-template-rows: rem(92px) 1fr rem(30px);
+  grid-template-rows: rem(92px) 1fr rem(40px);
 
   min-height: 100vh;
+
+  background: {
+    image: image-url('shared/bangkok-strip.svg');
+    repeat: no-repeat;
+    size: 250% auto;
+    position: center bottom;
+  }
+
+  @include media-breakpoint-up('sm') {
+    background-size: 100% auto;
+  }
 }
 
 .layout-default .app-header,
@@ -19,8 +30,4 @@
 .layout-default .app-header {
   padding-top: rem(30px);
   padding-bottom: rem(30px);
-}
-
-.layout-default .app-footer {
-  line-height: rem(30px);
 }
