--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
 
 @import 'layouts/default';
 
+@import 'components/app-footer';
 @import 'components/app-header';
 @import 'components/icon';
 @import 'components/list';
