--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,6 +15,9 @@ $color-gray: (
 
 $font-sizes: (
   default: 1rem,
+  sm: 0.875rem,
+  lg: 1.125rem,
+  xl: 1.375rem
 );
 
 $base-font-size: map-get($font-sizes, 'default');
