Update manifest with the Ruby conference configuration

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
 <meta name="apple-touch-fullscreen" content="yes"/>
 <meta name="apple-mobile-web-app-status-bar-style" content="#1b79ea"/>
 
-<meta name="theme-color" content="#ea1017"/>
+<meta name="theme-color" content="#f83548"/>
 
 <meta http-equiv="Page-Enter" content="RevealTrans(Duration=2.0,Transition=2)">
 <meta http-equiv="Page-Exit" content="RevealTrans(Duration=3.0,Transition=12)">
