--- a/_sass/screens/_home.scss
+++ b/_sass/screens/_home.scss
@@ -31,6 +31,9 @@ body.home .announcement {
   &__btn {
     margin-top: rem(30px);
 
+    font-weight: 600;
+    text-transform: uppercase;
+
     @include media-breakpoint-up('lg') {
       margin-top: rem(40px);
       padding: rem(30px) rem(52px);
