Improve visual centering of the content by compensating the diff in height between the header and footer

--- a/_sass/screens/_home.scss
+++ b/_sass/screens/_home.scss
@@ -5,6 +5,9 @@ body.home .app-content {
     display: flex;
     align-items: center;
 
+    // Compensate for the app-header to be the same height as the app-header
+    // to achieve visual centering
+    margin-top: rem(-52px);
     padding: 0;
   }
 }
