Properly import the custom font type into teh default layout

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 @import 'functions/image-url';
 @import 'functions/sizing';
 
+@import 'base/font';
 @import 'base/root';
 @import 'base/typography';
 
