Add the venue name and the corresponding Google Map link

--- a/_sass/screens/_home.scss
+++ b/_sass/screens/_home.scss
@@ -57,6 +57,10 @@ body.home .announcement__logistic {
     margin: 0;
   }
 
+  a {
+    color: inherit;
+  }
+
   .announcement__venue {
     position: relative;
 
