Implement layout with spacing left for the side navigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,9 @@
 {% include header.html %}
 
 <main class="app-content">
-  {{ content }}
+  <div class="container">
+    {{ content }}
+  </div>
 </main>
 
 {% include footer.html %}
