--- a/_sass/screens/_home.scss
+++ b/_sass/screens/_home.scss
@@ -1,160 +1,3 @@
-body.home .app-content {
-  padding-top: rem(30px);
+body.home {
 
-  @include media-breakpoint-up('sm') {
-    display: flex;
-    align-items: center;
-
-    // Compensate for the app-header to be the same height as the app-header
-    // to achieve visual centering
-    margin-top: rem(-52px);
-    padding: 0;
-  }
-}
-
-body.home .announcement {
-  @include make-container-max-widths();
-
-  margin: 0 auto;
-
-  // Main text shown below the lead text
-  > p {
-    margin-bottom: 0;
-
-    @include media-breakpoint-up('sm') {
-      font-size: map-get($font-sizes, 'xl');
-    }
-
-    @include media-breakpoint-up('lg') {
-      width: 62%;
-    }
-  }
-
-  // Mailing list subscription
-  &__btn {
-    margin-top: rem(30px);
-
-    font-weight: 600;
-    text-transform: uppercase;
-
-    @include media-breakpoint-up('lg') {
-      margin-top: rem(40px);
-      padding: rem(30px) rem(52px);
-    }
-  }
-}
-
-body.home .announcement__logistic {
-  font-size: map-get($font-sizes, 'sm');
-  text-transform: uppercase;
-
-  @include media-breakpoint-up('sm') {
-    display: flex;
-    font-size: map-get($font-sizes, 'lg');
-  }
-
-  p {
-    margin: 0;
-  }
-
-  a {
-    color: inherit;
-  }
-
-  .announcement__venue {
-    position: relative;
-
-    @include media-breakpoint-up('sm') {
-      margin-left: rem(40px);
-    }
-  }
-
-  .announcement__venue:before {
-    @include media-breakpoint-up('sm') {
-      content: '·';
-      position: absolute;
-      left: -24px;
-      top: 0;
-
-      line-height: rem(32px);
-      font-size: rem(40px);
-    }
-  }
-}
-
-body.home .announcement__lead {
-  position: relative;
-  padding: rem(26px) 0;
-
-  &:after {
-    content: '';
-
-    position: absolute;
-    top: rem(76px);
-    left: rem(164px);
-    z-index: map-get($zIndex, 'behind');
-
-    width: rem(70px);
-    height: rem(70px);
-
-    background: {
-      image: image-url('shared/ruby.svg');
-      repeat: no-repeat;
-      size: contain;
-    };
-
-    @include media-breakpoint-up('sm') {
-      top: rem(116px);
-      left: rem(310px);
-
-      width: rem(125px);
-      height: rem(125px);
-    }
-
-    @include media-breakpoint-up('lg') {
-      // Full size image
-      width: rem(408px);
-      height: rem(333px);
-
-      top: rem(135px);
-      right: 0;
-      left: initial;
-      transform: rotate(15deg);
-    }
-  }
-
-  .announcement__title {
-    height: rem(47px);
-
-    background: {
-      image: image-url('shared/rubyconfth.svg');
-      repeat: no-repeat;
-      size: contain;
-    }
-
-    @include media-breakpoint-up('sm') {
-      height: rem(87px);
-    }
-  }
-
-  .announcement__year {
-    margin: rem(10px) 0 0;
-    height: rem(46px);
-
-    background: {
-      image: image-url('shared/2019.svg');
-      repeat: no-repeat;
-      size: contain;
-    }
-
-    @include media-breakpoint-up('sm') {
-      height: rem(88px);
-    }
-
-    @include media-breakpoint-up('lg') {
-      margin-top: rem(30px);
-
-      height: rem(105px);
-    }
-  }
 }
