--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -25,6 +25,7 @@
 @import 'components/app-header';
 @import 'components/icon';
 @import 'components/list';
+@import 'components/logo';
 @import 'components/list-social-platform';
 
 @import 'screens/home';
