--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
 <footer class="app-footer">
-  <small>This work by <a href="https://nimblehq.co/" target="_blank">Nimble</a> is licensed under a Creative Commons Attribution 3.0 Unported Licence</small>
+  <div class="container">
+    <small>This work by <a href="https://nimblehq.co/" target="_blank">Nimble</a> is licensed under a Creative Commons Attribution 3.0 Unported Licence</small>
+  </div>
 </footer>
