--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,30 @@
 <header class="app-header">
-  <div class="app-header__organizer">
-    <a href="https://www.meetup.com/bangkok-rb/" target="_blank" class="app-header__link">Bangkok.rb</a>
-  </div>
+  <div class="container">
+    <div class="app-header__event">
+      <a href="/" class="app-header__logo logo logo--text">RubyConf TH 2019</a>
+      <div class="app-header__logistic">
+        <div class="app-header__date">
+          September <strong>6-7, 2019</strong>
+        </div>
+        <div class="app-header__venue">
+          Venue: <strong>Pullman Bangkok King Power</strong>
+        </div>
+      </div>
+    </div>
 
-  <ul class="list-social-plaftorm list--unstyled">
-    {% for social_platform in site.data.social_platforms %}
-    <li class="list-social-plaftorm__item">
-      <a href="{{ social_platform.url }}" target="_blank" class="list-social-plaftorm__link app-header__link">
-        {% capture socialIcon %}{{ social_platform.icon | prepend: 'icon-' }}{% endcapture %}
-        {% capture className %}{{ social_platform.icon | prepend: 'list-social-plaftorm__icon--' | prepend: ' ' | prepend: 'list-social-plaftorm__icon' | append: ' ' | append: 'icon--xs' }}{% endcapture %}
-        {% include icon.svg icon=socialIcon class=className %}
-        <span class="sr-only">{{ social_platform.name }}</span>
-      </a>
-    </li>
-    {% endfor %}
-  </ul>
+    <div class="app-header__social">
+      <ul class="list-social-platform list--unstyled">
+        {% for social_platform in site.data.social_platforms %}
+        <li class="list-social-platform__item">
+          <a href="{{ social_platform.url }}" target="_blank" class="list-social-platform__link">
+            {% capture socialIcon %}{{ social_platform.icon | prepend: 'icon-' }}{% endcapture %}
+            {% capture className %}{{ social_platform.icon | prepend: 'list-social-platform__icon--' | prepend: ' ' | prepend: 'list-social-platform__icon' | append: ' ' | append: 'icon--xs' }}{% endcapture %}
+            {% include icon.svg icon=socialIcon class=className %}
+            <span class="sr-only">{{ social_platform.name }}</span>
+          </a>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
 </header>
