--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -41,6 +41,10 @@ $zIndex: (
 $base-animation-duration: 300ms;
 $base-animation-timing: linear;
 
+// Layout
+
+$app-navigation-lg-width: 154px;
+
 /////////////////////////////
 // Bootstrap Customization //
 /////////////////////////////
@@ -54,4 +58,3 @@ $body-color: $base-font-color;
 
 $btn-border-radius: 0;
 $btn-border-radius-lg: 0;
-$btn-border-radius-sm: 0;
