Implement the application footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,14 @@
 <footer class="app-footer">
   <div class="container">
-    <small>This work by <a href="https://nimblehq.co/" target="_blank">Nimble</a> is licensed under a Creative Commons Attribution 3.0 Unported Licence</small>
+    <div class="app-footer__brand">
+      <a href="/" class="logo logo--icon">RubyConf TH</a>
+      <span class="app-footer__copy">&copy; 2019 Bangkok.rb</span>
+    </div>
+
+    <ul class="app-footer__list-link list--unstyled">
+      <li class="app-footer__list-link-item">
+        <a href="http://confcodeofconduct.com/" class="app-footer__link">Code of Conduct</a>
+      </li>
+    </ul>
   </div>
 </footer>
