--- a/_sass/layouts/default.scss
+++ b/_sass/layouts/default.scss
@@ -25,3 +25,9 @@
     padding-bottom: rem(30px);
   }
 }
+
+
+.layout-default .app-footer {
+  padding-top: rem(40px);
+  padding-bottom: rem(40px);
+}
