Implement the navigation menu with mobile drawer behaviour

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,5 +22,8 @@
 </main>
 
 {% include footer.html %}
+
+<script src="/assets/javascript/vendor.js"></script>
+<script src="/assets/javascript/application.js"></script>
 </body>
 </html>
