--- a/_sass/components/_app-footer.scss
+++ b/_sass/components/_app-footer.scss
@@ -18,7 +18,7 @@
   &__copy {
     margin-left: 1.25rem;
 
-    font-size: map-get($font-sizes, 'sm');
+    font-size: map-get($font-sizes, 'xs');
   }
 
   &__list-link {
