--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -23,7 +23,10 @@
 
 @import 'components/app-footer';
 @import 'components/app-header';
+@import 'components/app-navigation';
+@import 'components/btn';
 @import 'components/icon';
+@import 'components/icon-hamburger';
 @import 'components/list';
 @import 'components/logo';
 @import 'components/list-social-platform';
