Add list of social links in the side navigation menu

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,7 +8,7 @@ $color-gray: (
   primary: #2c2d30,
   dark: #211f21,
   light: #c0c0c0,
-  lightest: #f0f0f
+  lightest: #f7f7f7
 );
 
 // Typography
