--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,22 +36,15 @@
             <a href="#sponsors" class="app-navigation__menu-link">Sponsors</a>
           </li>
         </ul>
+
+        <hr/>
+
+        {% include list-social-platform.html %}
       </div>
     </nav>
 
     <div class="app-header__social">
-      <ul class="list-social-platform list--unstyled">
-        {% for social_platform in site.data.social_platforms %}
-        <li class="list-social-platform__item">
-          <a href="{{ social_platform.url }}" target="_blank" class="list-social-platform__link">
-            {% capture socialIcon %}{{ social_platform.icon | prepend: 'icon-' }}{% endcapture %}
-            {% capture className %}{{ social_platform.icon | prepend: 'list-social-platform__icon--' | prepend: ' ' | prepend: 'list-social-platform__icon' | append: ' ' | append: 'icon--xs' }}{% endcapture %}
-            {% include icon.svg icon=socialIcon class=className %}
-            <span class="sr-only">{{ social_platform.name }}</span>
-          </a>
-        </li>
-        {% endfor %}
-      </ul>
+      {% include list-social-platform.html %}
     </div>
   </div>
 </header>
