Implement sticky navigation when scrolling down the page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="app-header">
+<header id="home" class="app-header">
   <div class="container">
     <div class="app-header__event">
       <a href="/" class="app-header__logo logo logo--text">
@@ -22,18 +22,24 @@
       </button>
 
       <div class="app-navigation__pane">
+        <div class="app-navigation__event">
+          <a href="#home" class="app-navigation__logo app-navigation__link logo logo--icon">
+            <span class="sr-only">RubyConf TH 2019</span>
+          </a>
+        </div>
+
         <ul class="app-navigation__menu list--unstyled">
           <li class="app-navigation__menu-item">
-            <a href="#about" class="app-navigation__menu-link">About</a>
+            <a href="#about" class="app-navigation__menu-link app-navigation__link">About</a>
           </li>
           <li class="app-navigation__menu-item">
-            <a href="#speakers" class="app-navigation__menu-link">Speakers</a>
+            <a href="#speakers" class="app-navigation__menu-link app-navigation__link">Speakers</a>
           </li>
           <li class="app-navigation__menu-item">
-            <a href="#venue" class="app-navigation__menu-link">Venue</a>
+            <a href="#venue" class="app-navigation__menu-link app-navigation__link">Venue</a>
           </li>
           <li class="app-navigation__menu-item">
-            <a href="#sponsors" class="app-navigation__menu-link">Sponsors</a>
+            <a href="#sponsors" class="app-navigation__menu-link app-navigation__link">Sponsors</a>
           </li>
         </ul>
 
