--- a/_sass/components/_app-navigation.scss
+++ b/_sass/components/_app-navigation.scss
@@ -48,7 +48,7 @@
     padding: 1rem 2rem;
 
     border: 2px solid #000;
-    transition: top $base-animation-duration $base-animation-duration;
+    transition: top $base-animation-duration ease;
   }
 
   hr {
@@ -72,7 +72,7 @@
   text-align: center;
 
   opacity: 0;
-  transition: opacity $base-animation-duration/2 $base-animation-duration;
+  transition: opacity $base-animation-duration/2 ease-in-out;
 
   @include media-breakpoint-up('lg') {
     display: initial;
