--- a/_sass/components/_app-footer.scss
+++ b/_sass/components/_app-footer.scss
@@ -18,7 +18,7 @@
   &__copy {
     margin-left: 1.25rem;
 
-    font-size: map-get($font-sizes, 'xs');
+    font-size: map-get($font-sizes, 'sm');
   }
 
   &__list-link {
@@ -30,7 +30,7 @@
   }
 
   &__link {
-    font-size: map-get($font-sizes, 'lg');
+    font-size: map-get($font-sizes, 'sm');
 
     &, &:hover {
       color: $body-color;
