--- a/_sass/components/_app-navigation.scss
+++ b/_sass/components/_app-navigation.scss
@@ -136,13 +136,14 @@
       }
     }
 
-    &:hover {
+    &:hover,
+    &--active {
       font-weight: 700;
       text-decoration: none;
+    }
 
-      &::before {
-        opacity: 1;
-      }
+    &--active::before {
+      opacity: 1;
     }
   }
 }
