Show the conference name below the logo icon in the sticky navigation

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,9 @@
 <footer class="app-footer">
   <div class="container">
     <div class="app-footer__brand">
-      <a href="/" class="logo logo--icon">RubyConf TH</a>
+      <a href="/" class="logo logo--icon">
+        <span class="sr-only">RubyConf TH {💎}</span>
+      </a>
       <span class="app-footer__copy">&copy; 2019 Bangkok.rb</span>
     </div>
 
