--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header id="home" class="app-header">
   <div class="container">
     <div class="app-header__event">
-      <a href="/" class="app-header__logo logo logo--text">
-        <span class="sr-only">RubyConf TH 2019</span>
+      <a href="/" class="app-header__logo logo logo--text-icon">
+        <span class="sr-only">RubyConf TH {💎}</span>
       </a>
 
       <div class="app-header__logistic">
@@ -23,8 +23,9 @@
 
       <div class="app-navigation__pane">
         <div class="app-navigation__event">
-          <a href="#home" class="app-navigation__logo app-navigation__link logo logo--icon">
-            <span class="sr-only">RubyConf TH 2019</span>
+          <a href="#home" class="app-navigation__logo app-navigation__link">
+            <div class="logo logo--icon"><span class="sr-only">{💎}</span></div>
+            <div class="logo logo--text"><span class="sr-only">RubyConf TH</span></div>
           </a>
         </div>
 
