--- a/_sass/components/_app-navigation.scss
+++ b/_sass/components/_app-navigation.scss
@@ -83,9 +83,16 @@
 
   .logo {
     display: inline-block;
+  }
 
+  .logo--icon {
     width: rem(80px);
     height: rem(56px);
+  }
+
+  .logo--text {
+    // Deducting the border width of the navigation pane
+    width: calc(100% - 4px);
   }
 }
 
