As a user, I can see the application navigation (#35)
Closes #23 

## What happened

Implement the navigation menu with DIFFERENT behaviors on large and small screens. 
 
## Insight

* I used the Scrollspy component [Bootstrap native](http://thednp.github.io/bootstrap.native/)
* I added some extra resize event binding to make sure the navigation is reset each time. The common use case is when switching from portrait to landscape modes.
 
## Proof Of Work

![2562-03-07 21 43 52](https://user-images.githubusercontent.com/696529/53964581-324b4d00-4122-11e9-9830-328490cf72d5.gif)

![2562-03-07 21 45 34](https://user-images.githubusercontent.com/696529/53964677-60309180-4122-11e9-9d08-965f8b7439d6.gif)

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,16 +8,17 @@ $color-gray: (
   primary: #2c2d30,
   dark: #211f21,
   light: #c0c0c0,
-  lightest: #f0f0f
+  lightest: #f7f7f7
 );
 
 // Typography
 
 $font-sizes: (
-  default: 1rem,
-  sm: 0.875rem,
-  lg: 1.125rem,
-  xl: 1.375rem
+  default: 1rem, // 16px
+  xs: 0.75rem,   // 12 px
+  sm: 0.875rem,  // 14 px
+  lg: 1.125rem,  // 18 px
+  xl: 1.375rem   // 22 px
 );
 
 $base-font-size: map-get($font-sizes, 'default');
