Minor update of the base colors

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,14 +1,14 @@
 // Base
 
 $color-brand: (
-  primary: #f83548
+  primary: #f81c49
 );
 
 $color-gray: (
-  primary: #2c2d30,
-  dark: #211f21,
-  light: #c0c0c0,
-  lightest: #f7f7f7
+  primary: #000006,
+  light: #66666a,
+  lighter: #99999B,
+  lightest: #cccccd
 );
 
 // Typography
