--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,12 +18,12 @@
 <meta name="twitter:site" content="{{ site.url }}" />
 <meta name="twitter:title" content="{{ meta_title }}" />
 <meta name="twitter:description" content="{{ meta_description }}" />
-<meta name="twitter:image" content="/public/images/social/twitter-icon.png" />
+<meta name="twitter:image" content="/public/images/social/twitter.png" />
 
 <meta name="apple-mobile-web-app-title" content="{{ site.name }}"/>
 <meta name="mobile-web-app-capable" content="yes"/>
 <meta name="apple-touch-fullscreen" content="yes"/>
-<meta name="apple-mobile-web-app-status-bar-style" content="#1b79ea"/>
+<meta name="apple-mobile-web-app-status-bar-style" content="#f81c49"/>
 
 <meta name="theme-color" content="#f81c49"/>
 
