--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -25,6 +25,7 @@
 @import 'components/app-header';
 @import 'components/app-navigation';
 @import 'components/btn';
+@import 'components/display-heading';
 @import 'components/icon';
 @import 'components/icon-hamburger';
 @import 'components/list';
