Implement the responsive list of keynote speakers

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 
     <ul class="app-footer__list-link list--unstyled">
       <li class="app-footer__list-link-item">
-        <a href="http://confcodeofconduct.com/" target="_blank" class="app-footer__link">Code of Conduct</a>
+        <a href="http://confcodeofconduct.com/" target="_blank" class="app-footer__link link link--secondary">Code of Conduct</a>
       </li>
     </ul>
   </div>
