--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -28,7 +28,9 @@
 @import 'components/display-heading';
 @import 'components/icon';
 @import 'components/icon-hamburger';
+@import 'components/link';
 @import 'components/list';
+@import 'components/list-keynote-speaker';
 @import 'components/logo';
 @import 'components/list-social-platform';
 
