--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -9,3 +9,23 @@ hr {
   margin: 2rem 0;
   border: 2px dashed map-get($color-gray, 'lightest');
 }
+
+::-moz-selection {
+  color: $white;
+  background: map-get($color-brand, 'primary');
+}
+
+::selection {
+  color: $white;
+  background: map-get($color-brand, 'primary');
+}
+
+// Utility to replicate the logo for any text: Red-Text Black-Text
+// <span>Ruby<span>Conf
+.text-branded {
+  font-weight: bold;
+
+  > span {
+    color: map-get($color-brand, 'primary');
+  }
+}
