--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -33,5 +33,6 @@
 @import 'components/list-keynote-speaker';
 @import 'components/logo';
 @import 'components/list-social-platform';
+@import 'components/map-venue';
 
 @import 'screens/home';
