Implement the venue map using a static Google Map

--- a/_includes/map-venue.html
+++ b/_includes/map-venue.html
@@ -1,5 +1,8 @@
 {% capture content %}
 <div class="map-venue">
+  <div class="map map-venue__map" data-geolocation="13.75893,100.5352453" data-marker="Pullman Bangkok King Power">
+    {% comment %}load map for each locations{% endcomment %}
+  </div>
   <div class="map-venue__direction">
     <address class="map-venue__address">
       <a href="https://www.pullmanbangkokkingpower.com/" class="map-venue__name url fn org" >Pullman Bangkok King Power</a>
