Implement the list of sponsors and partners

--- a/_sass/screens/_home.scss
+++ b/_sass/screens/_home.scss
@@ -19,6 +19,18 @@ body.home .app-content {
       font-weight: bold;
     }
   }
+
+  .map-venue,
+  .list-keynote-speaker,
+  .list-sponsor {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+
+    @include media-breakpoint-up('lg') {
+      margin-top: 3rem;
+      margin-bottom: 3rem;
+    }
+  }
 }
 
 body.home .home-hero {
@@ -66,4 +78,8 @@ body.home .home-hero {
       margin-top: rem(-40px);
     }
   }
+}
+
+body.home .home-sponsor {
+  text-align: center;
 }
