--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -31,6 +31,7 @@
 @import 'components/link';
 @import 'components/list';
 @import 'components/list-keynote-speaker';
+@import 'components/list-sponsor';
 @import 'components/logo';
 @import 'components/list-social-platform';
 @import 'components/map';
